// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialProgressBar Snapshots > renders complete progress state 1`] = `
<div
  class="flex flex-col gap-1 "
  data-testid="dial-progress-bar"
>
  <div
    class="flex justify-between items-center"
  >
    <span
      class="text-xs font-medium text-ink-600 dark:text-parchment-300"
    >
      14
       of 
      14
       configured
    </span>
  </div>
  <div
    aria-label="Dial configuration progress"
    aria-valuemax="14"
    aria-valuemin="0"
    aria-valuenow="14"
    class="h-2 w-full bg-ink-200 dark:bg-shadow-600 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-gradient-to-r from-gold-400 to-gold-500 dark:from-gold-500 dark:to-gold-400 transition-all duration-300 ease-out"
      data-testid="progress-fill"
      style="width: 100%;"
    />
  </div>
</div>
`;

exports[`DialProgressBar Snapshots > renders empty progress state 1`] = `
<div
  class="flex flex-col gap-1 "
  data-testid="dial-progress-bar"
>
  <div
    class="flex justify-between items-center"
  >
    <span
      class="text-xs font-medium text-ink-600 dark:text-parchment-300"
    >
      0
       of 
      14
       configured
    </span>
  </div>
  <div
    aria-label="Dial configuration progress"
    aria-valuemax="14"
    aria-valuemin="0"
    aria-valuenow="0"
    class="h-2 w-full bg-ink-200 dark:bg-shadow-600 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-gradient-to-r from-gold-400 to-gold-500 dark:from-gold-500 dark:to-gold-400 transition-all duration-300 ease-out"
      data-testid="progress-fill"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`DialProgressBar Snapshots > renders partial progress state 1`] = `
<div
  class="flex flex-col gap-1 "
  data-testid="dial-progress-bar"
>
  <div
    class="flex justify-between items-center"
  >
    <span
      class="text-xs font-medium text-ink-600 dark:text-parchment-300"
    >
      7
       of 
      14
       configured
    </span>
  </div>
  <div
    aria-label="Dial configuration progress"
    aria-valuemax="14"
    aria-valuemin="0"
    aria-valuenow="7"
    class="h-2 w-full bg-ink-200 dark:bg-shadow-600 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-gradient-to-r from-gold-400 to-gold-500 dark:from-gold-500 dark:to-gold-400 transition-all duration-300 ease-out"
      data-testid="progress-fill"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`DialProgressBar Snapshots > renders with custom className 1`] = `
<div
  class="flex flex-col gap-1 mt-4 mb-2"
  data-testid="dial-progress-bar"
>
  <div
    class="flex justify-between items-center"
  >
    <span
      class="text-xs font-medium text-ink-600 dark:text-parchment-300"
    >
      5
       of 
      10
       configured
    </span>
  </div>
  <div
    aria-label="Dial configuration progress"
    aria-valuemax="10"
    aria-valuemin="0"
    aria-valuenow="5"
    class="h-2 w-full bg-ink-200 dark:bg-shadow-600 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-gradient-to-r from-gold-400 to-gold-500 dark:from-gold-500 dark:to-gold-400 transition-all duration-300 ease-out"
      data-testid="progress-fill"
      style="width: 50%;"
    />
  </div>
</div>
`;
